framec/tests/snapshots/lua_snapshots__forward.snap
---
source: framec/tests/lua_snapshots.rs
expression: "compile_fixture(\"07_forward\", \"lua\")"
---
local ForwardFrameEvent = {}
ForwardFrameEvent.__index = ForwardFrameEvent

function ForwardFrameEvent.new(message, parameters)
    local self = setmetatable({}, ForwardFrameEvent)
    self._message = message
    self._parameters = parameters or {}
    return self
end


local ForwardFrameContext = {}
ForwardFrameContext.__index = ForwardFrameContext

function ForwardFrameContext.new(event, default_return)
    local self = setmetatable({}, ForwardFrameContext)
    self._event = event
    self._return = default_return
    self._data = {}
    self._transitioned = false
    return self
end


local ForwardCompartment = {}
ForwardCompartment.__index = ForwardCompartment

function ForwardCompartment.new(state, parent_compartment)
    local self = setmetatable({}, ForwardCompartment)
    self.state = state
    self.state_args = {}
    self.state_vars = {}
    self.enter_args = {}
    self.exit_args = {}
    self.forward_event = nil
    self.parent_compartment = parent_compartment
    return self
end

function ForwardCompartment:copy()
    local c = ForwardCompartment.new(self.state, self.parent_compartment)
    c.state_args = {}
    for k, v in pairs(self.state_args) do c.state_args[k] = v end
    c.state_vars = {}
    for k, v in pairs(self.state_vars) do c.state_vars[k] = v end
    c.enter_args = {}
    for k, v in pairs(self.enter_args) do c.enter_args[k] = v end
    c.exit_args = {}
    for k, v in pairs(self.exit_args) do c.exit_args[k] = v end
    c.forward_event = self.forward_event
    return c
end


local Forward = {}
Forward.__index = Forward

function Forward.new()
    local self = setmetatable({}, Forward)
    self._state_stack = {}
    self._context_stack = {}
    self.starts = 0
    self.middles = 0
    self.__compartment = self:__prepareEnter("Start", nil, nil)
    self.__next_compartment = nil
    return self
end

function Forward:_frame_init()
    local __e = ForwardFrameEvent.new("$>", self.__compartment.enter_args)
    local __ctx = ForwardFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    self:__kernel(__e)
    table.remove(self._context_stack)
end

function Forward._create()
    local c = Forward.new()
    c:_frame_init()
    return c
end

function Forward:hsm_chain()
    local t = {}
    t["Start"] = {"Start"}
    t["Middle"] = {"Middle"}
    t["End"] = {"End"}
    return t
end
function Forward:__prepareEnter(leaf, state_args, enter_args)
    state_args = state_args or {}
    enter_args = enter_args or {}
    local comp = nil
    local chain = self:hsm_chain()[leaf]
    for i = 1, #chain do
        local new_comp = ForwardCompartment.new(chain[i])
        new_comp.state_args = {}
        for j = 1, #state_args do new_comp.state_args[j] = state_args[j] end
        new_comp.enter_args = {}
        for j = 1, #enter_args do new_comp.enter_args[j] = enter_args[j] end
        new_comp.parent_compartment = comp
        comp = new_comp
    end
    return comp
end

function Forward:__prepareExit(exit_args)
    local comp = self.__compartment
    while comp ~= nil do
        comp.exit_args = {}
        for j = 1, #exit_args do comp.exit_args[j] = exit_args[j] end
        comp = comp.parent_compartment
    end
end

function Forward:__kernel(__e)
    -- Route event to current state.
    self:__router(__e)
    -- Drain any transitions queued by the handler.
    while self.__next_compartment ~= nil do
        local next_compartment = self.__next_compartment
        self.__next_compartment = nil
        local exit_event = ForwardFrameEvent.new("<$", self.__compartment.exit_args)
        self:__router(exit_event)
        self.__compartment = next_compartment
        local forward_event = next_compartment.forward_event
        next_compartment.forward_event = nil
        if forward_event == nil then
            local enter_event = ForwardFrameEvent.new("$>", self.__compartment.enter_args)
            self:__router(enter_event)
        elseif forward_event._message == "$>" then
            self:__router(forward_event)
        else
            local enter_event = ForwardFrameEvent.new("$>", self.__compartment.enter_args)
            self:__router(enter_event)
            self:__router(forward_event)
        end
        for _, ctx in ipairs(self._context_stack) do
            ctx._transitioned = true
        end
    end
end

function Forward:__router(__e)
    local handler = self["_state_" .. self.__compartment.state]
    if handler then
        handler(self, __e, self.__compartment)
    end
end

function Forward:__transition(next_compartment)
    self.__next_compartment = next_compartment
end

function Forward:run()
    local __e = ForwardFrameEvent.new("run", {})
    local __ctx = ForwardFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    self:__kernel(__e)
    return table.remove(self._context_stack)._return
end

function Forward:finish()
    local __e = ForwardFrameEvent.new("finish", {})
    local __ctx = ForwardFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    self:__kernel(__e)
    return table.remove(self._context_stack)._return
end

function Forward:_state_Start(__e, compartment)
    if __e._message == "run" then
        self:_s_Start_hdl_user_run(__e, compartment)
        return
    end
end

function Forward:_state_Middle(__e, compartment)
    if __e._message == "finish" then
        self:_s_Middle_hdl_user_finish(__e, compartment)
        return
    end
    if __e._message == "run" then
        self:_s_Middle_hdl_user_run(__e, compartment)
        return
    end
end

function Forward:_state_End(__e, compartment)
    if __e._message == "finish" then
        self:_s_End_hdl_user_finish(__e, compartment)
        return
    end
end

function Forward:_s_Start_hdl_user_run(__e, compartment)
    self.starts = self.starts + 1
    local __compartment = self:__prepareEnter("Middle", nil, nil)
    __compartment.forward_event = __e
    self:__transition(__compartment)
    return
end

function Forward:_s_Middle_hdl_user_finish(__e, compartment)
    local __compartment = self:__prepareEnter("End", nil, nil)
    self:__transition(__compartment)
    return
end

function Forward:_s_Middle_hdl_user_run(__e, compartment)
    self.middles = self.middles + 1
end

function Forward:_s_End_hdl_user_finish(__e, compartment)

end
