framec/tests/snapshots/lua_snapshots__lifecycle.snap
---
source: framec/tests/lua_snapshots.rs
expression: "compile_fixture(\"08_lifecycle\", \"lua\")"
---
local LifecycleFrameEvent = {}
LifecycleFrameEvent.__index = LifecycleFrameEvent

function LifecycleFrameEvent.new(message, parameters)
    local self = setmetatable({}, LifecycleFrameEvent)
    self._message = message
    self._parameters = parameters or {}
    return self
end


local LifecycleFrameContext = {}
LifecycleFrameContext.__index = LifecycleFrameContext

function LifecycleFrameContext.new(event, default_return)
    local self = setmetatable({}, LifecycleFrameContext)
    self._event = event
    self._return = default_return
    self._data = {}
    self._transitioned = false
    return self
end


local LifecycleCompartment = {}
LifecycleCompartment.__index = LifecycleCompartment

function LifecycleCompartment.new(state, parent_compartment)
    local self = setmetatable({}, LifecycleCompartment)
    self.state = state
    self.state_args = {}
    self.state_vars = {}
    self.enter_args = {}
    self.exit_args = {}
    self.forward_event = nil
    self.parent_compartment = parent_compartment
    return self
end

function LifecycleCompartment:copy()
    local c = LifecycleCompartment.new(self.state, self.parent_compartment)
    c.state_args = {}
    for k, v in pairs(self.state_args) do c.state_args[k] = v end
    c.state_vars = {}
    for k, v in pairs(self.state_vars) do c.state_vars[k] = v end
    c.enter_args = {}
    for k, v in pairs(self.enter_args) do c.enter_args[k] = v end
    c.exit_args = {}
    for k, v in pairs(self.exit_args) do c.exit_args[k] = v end
    c.forward_event = self.forward_event
    return c
end


local Lifecycle = {}
Lifecycle.__index = Lifecycle

function Lifecycle.new()
    local self = setmetatable({}, Lifecycle)
    self._state_stack = {}
    self._context_stack = {}
    self.entered = 0
    self.exited = 0
    self.tag = ""
    self.__compartment = self:__prepareEnter("Idle", nil, nil)
    self.__next_compartment = nil
    return self
end

function Lifecycle:_frame_init()
    local __e = LifecycleFrameEvent.new("$>", self.__compartment.enter_args)
    local __ctx = LifecycleFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    self:__kernel(__e)
    table.remove(self._context_stack)
end

function Lifecycle._create()
    local c = Lifecycle.new()
    c:_frame_init()
    return c
end

function Lifecycle:hsm_chain()
    local t = {}
    t["Idle"] = {"Idle"}
    t["Running"] = {"Running"}
    return t
end
function Lifecycle:__prepareEnter(leaf, state_args, enter_args)
    state_args = state_args or {}
    enter_args = enter_args or {}
    local comp = nil
    local chain = self:hsm_chain()[leaf]
    for i = 1, #chain do
        local new_comp = LifecycleCompartment.new(chain[i])
        new_comp.state_args = {}
        for j = 1, #state_args do new_comp.state_args[j] = state_args[j] end
        new_comp.enter_args = {}
        for j = 1, #enter_args do new_comp.enter_args[j] = enter_args[j] end
        new_comp.parent_compartment = comp
        comp = new_comp
    end
    return comp
end

function Lifecycle:__prepareExit(exit_args)
    local comp = self.__compartment
    while comp ~= nil do
        comp.exit_args = {}
        for j = 1, #exit_args do comp.exit_args[j] = exit_args[j] end
        comp = comp.parent_compartment
    end
end

function Lifecycle:__kernel(__e)
    -- Route event to current state.
    self:__router(__e)
    -- Drain any transitions queued by the handler.
    while self.__next_compartment ~= nil do
        local next_compartment = self.__next_compartment
        self.__next_compartment = nil
        local exit_event = LifecycleFrameEvent.new("<$", self.__compartment.exit_args)
        self:__router(exit_event)
        self.__compartment = next_compartment
        local forward_event = next_compartment.forward_event
        next_compartment.forward_event = nil
        if forward_event == nil then
            local enter_event = LifecycleFrameEvent.new("$>", self.__compartment.enter_args)
            self:__router(enter_event)
        elseif forward_event._message == "$>" then
            self:__router(forward_event)
        else
            local enter_event = LifecycleFrameEvent.new("$>", self.__compartment.enter_args)
            self:__router(enter_event)
            self:__router(forward_event)
        end
        for _, ctx in ipairs(self._context_stack) do
            ctx._transitioned = true
        end
    end
end

function Lifecycle:__router(__e)
    local handler = self["_state_" .. self.__compartment.state]
    if handler then
        handler(self, __e, self.__compartment)
    end
end

function Lifecycle:__transition(next_compartment)
    self.__next_compartment = next_compartment
end

function Lifecycle:start(label)
    local __e = LifecycleFrameEvent.new("start", {label})
    local __ctx = LifecycleFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    self:__kernel(__e)
    return table.remove(self._context_stack)._return
end

function Lifecycle:stop()
    local __e = LifecycleFrameEvent.new("stop", {})
    local __ctx = LifecycleFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    self:__kernel(__e)
    return table.remove(self._context_stack)._return
end

function Lifecycle:_state_Idle(__e, compartment)
    if __e._message == "start" then
        self:_s_Idle_hdl_user_start(__e, compartment)
        return
    end
end

function Lifecycle:_state_Running(__e, compartment)
    if __e._message == "<$" then
        self:_s_Running_hdl_frame_exit(__e, compartment)
        return
    end
    if __e._message == "$>" then
        self:_s_Running_hdl_frame_enter(__e, compartment)
        return
    end
    if __e._message == "stop" then
        self:_s_Running_hdl_user_stop(__e, compartment)
        return
    end
end

function Lifecycle:_s_Idle_hdl_user_start(__e, compartment)
    local label = __e._parameters[1]
    (label)
    local __compartment = self:__prepareEnter("Running", nil, nil)
    self:__transition(__compartment)
    return
end

function Lifecycle:_s_Running_hdl_frame_exit(__e, compartment)
    self.exited = self.exited + 1
end

function Lifecycle:_s_Running_hdl_frame_enter(__e, compartment)
    local label = compartment.enter_args[1]
    self.entered = self.entered + 1
    self.tag = label
end

function Lifecycle:_s_Running_hdl_user_stop(__e, compartment)
    local __compartment = self:__prepareEnter("Idle", nil, nil)
    self:__transition(__compartment)
    return
end
